Fix compilation errors - change Map<String,Object> to Map<String,List<String>> for workflow attributes